--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,14 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+}
+main {
+  padding: 1rem;
 }
 
 header {
@@ -15,4 +19,24 @@ header a {
   color: #fff;
   font-weight: bold;
   text-decoration: none;
+}
+.products {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  justify-content: center;
+}
+.product {
+  border: 1px solid #404040;
+  margin: 1rem;
+}
+.product img {
+  width: 100%;
+  max-width: 35rem;
+}
+.product-info {
+  padding: 2rem;
+}
+.product-info p {
+  margin-bottom: 1rem;
 }
