--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -29,6 +29,9 @@ main {
 .img-thumbnail {
   height: 80px;
 }
+.small-container {
+  max-width: 600px;
+}
 /* .product {
   border: 1px solid #404040;
   margin: 1rem;
